[gd_scene load_steps=11 format=3 uid="uid://dno8ya28n0fu0"]

[ext_resource type="PackedScene" uid="uid://df463g67o2em3" path="res://assets/tables/receive_table/receive_table.tscn" id="1_ig7tw"]
[ext_resource type="Theme" uid="uid://b6yn6fpahycts" path="res://assets/main/main_theme.tres" id="2_3wy1v"]
[ext_resource type="Script" uid="uid://f1bhbi0m4dr1" path="res://assets/main/pause_button.gd" id="3_xwkvk"]
[ext_resource type="Script" uid="uid://br41fbc8o43jr" path="res://assets/main/dbc_file_button.gd" id="5_by4fb"]
[ext_resource type="Script" uid="uid://cobe8m4jq3bu7" path="res://assets/main/can_format_button.gd" id="5_irre0"]
[ext_resource type="Script" uid="uid://cxmpvhrkegrfn" path="res://assets/plotting/can_graph.gd" id="5_kfbq2"]
[ext_resource type="PackedScene" uid="uid://dj2at18bricod" path="res://assets/tables/transmit_table/transmit_table.tscn" id="6_67ri8"]
[ext_resource type="Script" uid="uid://ctju5kkovohfu" path="res://assets/tables/transmit_table/add_transmit_button.gd" id="9_by4fb"]
[ext_resource type="Texture2D" uid="uid://cxm8emaglono1" path="res://icon.png" id="9_irre0"]
[ext_resource type="Script" uid="uid://dnrrwnrmvjxvr" path="res://assets/alert_handler.gd" id="11_bsumw"]

[node name="Main" type="Node"]

[node name="Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("2_3wy1v")

[node name="Table" parent="Background" instance=ExtResource("1_ig7tw")]
layout_mode = 1
anchors_preset = 10
anchor_bottom = 0.0
offset_left = 50.0
offset_top = 25.0
offset_right = -50.0
offset_bottom = 302.0
grow_vertical = 1

[node name="TabContainer" type="TabContainer" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -467.0
grow_horizontal = 2
grow_vertical = 0
current_tab = 0

[node name="Interface" type="Control" parent="Background/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="PauseButton" type="Button" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 266.0
offset_top = 17.0
offset_right = -910.0
offset_bottom = -373.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Start"
script = ExtResource("3_xwkvk")

[node name="CanInterfaceBox" type="LineEdit" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 19.0
offset_right = -1036.0
offset_bottom = -377.0
grow_horizontal = 2
grow_vertical = 2
text = "can0"

[node name="CanInterfaceLabel" type="Label" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 26.0
offset_right = -1144.0
offset_bottom = -383.0
grow_horizontal = 2
grow_vertical = 2
text = "CAN Interface:"

[node name="DbcFileBox" type="LineEdit" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 140.0
offset_top = 69.0
offset_right = -674.0
offset_bottom = -327.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "No DBC file"
editable = false

[node name="DbcFileLabel" type="Label" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 62.0
offset_top = 75.0
offset_right = -1143.0
offset_bottom = -334.0
grow_horizontal = 2
grow_vertical = 2
text = "DBC File:	"

[node name="DbcFileButton" type="Button" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 627.0
offset_top = 67.0
offset_right = -549.0
offset_bottom = -323.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Open"
script = ExtResource("5_by4fb")

[node name="CanIdFormatLabel" type="Label" parent="Background/TabContainer/Interface"]
layout_mode = 0
offset_left = 50.0
offset_top = 135.0
offset_right = 169.0
offset_bottom = 158.0
text = "CAN ID Format:"

[node name="CanIdFormatButton" type="Button" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 176.0
offset_top = 127.0
offset_right = -971.0
offset_bottom = -263.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Hexadecimal"
script = ExtResource("5_irre0")

[node name="CanDataFormatLabel" type="Label" parent="Background/TabContainer/Interface"]
layout_mode = 0
offset_left = 31.0
offset_top = 191.0
offset_right = 170.0
offset_bottom = 214.0
text = "CAN Data Format:"

[node name="CanDataFormatButton" type="Button" parent="Background/TabContainer/Interface"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 176.0
offset_top = 182.0
offset_right = -971.0
offset_bottom = -208.0
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
text = "Hexadecimal"
script = ExtResource("5_irre0")

[node name="Plot" type="Control" parent="Background/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Panel" type="Panel" parent="Background/TabContainer/Plot"]
layout_mode = 0
offset_left = 18.0
offset_top = 38.0
offset_right = 170.0
offset_bottom = 402.0

[node name="LegendLabel" type="Label" parent="Background/TabContainer/Plot/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 33.0
offset_top = 8.0
offset_right = -30.0
offset_bottom = -322.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Legend"

[node name="Graph2D" type="Control" parent="Background/TabContainer/Plot"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -444.0
offset_top = -205.0
offset_right = 627.0
offset_bottom = 206.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_kfbq2")
background_color = Color(0.180392, 0.180392, 0.180392, 1)
grid_horizontal_visible = true
grid_vertical_visible = true
show_mouse_coordinates = false
legend_x_pos = -205
legend_y_pos = 50
metadata/_custom_type_script = "uid://bs2ndl3vun60f"

[node name="Transmit" type="Control" parent="Background/TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[node name="Table" parent="Background/TabContainer/Transmit" instance=ExtResource("6_67ri8")]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = -18.0
offset_bottom = -78.0

[node name="TransmitAddButton" type="Button" parent="Background/TabContainer/Transmit"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -1256.0
offset_top = -67.0
offset_right = -1135.0
offset_bottom = -17.0
grow_horizontal = 0
grow_vertical = 0
focus_mode = 0
text = "Add New"
script = ExtResource("9_by4fb")

[node name="TextureRect" type="TextureRect" parent="Background"]
layout_mode = 0
offset_left = 1125.0
offset_top = 375.0
offset_right = 1271.0
offset_bottom = 503.0
texture = ExtResource("9_irre0")
expand_mode = 1
stretch_mode = 4

[node name="GodotCanBridge" type="GodotCanBridge" parent="."]

[node name="AlertHandler" type="Node" parent="."]
script = ExtResource("11_bsumw")
